--- a/lesson001.html
+++ b/lesson001.html
@@ -6,6 +6,8 @@
 <body>
   <h1>VSCodeをインストール</h1>
   <p>(2023/02/20)</p>
+  <p>(目安 30分)</p>
+  <p>VSCode(Visual Studio Code)は開発者がよく使うエディタです。WindowsでもMacでも使えます。エディタとしてファイルの編集だけでなく、開発作業に便利なさまざまなツールが含まれています。ターミナルという、開発者が使う画面もVSCodeに内蔵されています。ターミナルはいわゆる黒い画面ってやつです。</p>
   <h2>課題</h2>
   <ol>
     <li>
@@ -29,7 +31,7 @@
     <a href="https://www.javadrive.jp/vscode/terminal/index1.html">VSCode | ターミナルを開く/ターミナルを閉じる</a>
   </p>
   <p>
-    この課題を終えたら、または途中で断念したら、以下の点を教えてください。このことは今後の課題に共通です。課題の難易度を調整するために必要なことですので、正直に教えてください。
+    この課題を終えたら、または途中で断念したら、できあがった成果物とともに、以下の点を教えてください。このことは今後の課題に共通です。課題の難易度を調整するために必要なことですので、正直に教えてください。スクリーンショットを見せてほしいのは、VSCodeをインストール済みの私がすぐにインストール直後の状態を再現することが困難で、状態を確認したいためです。
   </p>
   <ul>
     <li>この課題が難しかったかどうか。難しかった場合はどこが難しかったか</li>
