--- a/lesson001.html
+++ b/lesson001.html
@@ -28,10 +28,10 @@
   </p>
   <p>
     VSCodeでターミナルを開く方法はネット上にいろいろ記事がありますが、たとえば以下が参考になります。<br>
-    <a href="https://www.javadrive.jp/vscode/terminal/index1.html">VSCode | ターミナルを開く/ターミナルを閉じる</a>
+    <a href="https://www.javadrive.jp/vscode/terminal/index1.html" target="_blank">VSCode | ターミナルを開く/ターミナルを閉じる</a>
   </p>
   <p>
-    この課題を終えたら、または途中で断念したら、できあがった成果物とともに、以下の点を教えてください。このことは今後の課題に共通です。課題の難易度を調整するために必要なことですので、正直に教えてください。スクリーンショットを見せてほしいのは、VSCodeをインストール済みの私がすぐにインストール直後の状態を再現することが困難で、状態を確認したいためです。
+    この課題を終えたら、または途中で断念したら、できあがった成果物とともに、以下の点を教えてください。このことは今後の課題に共通です。課題の難易度を調整するために必要なことですので、正直に教えてください。スクリーンショットを見せてほしいのは、VSCodeをインストール済みの私がすぐにインストール直後の状態を再現することが困難であり、状態を確認したいためです。
   </p>
   <ul>
     <li>この課題が難しかったかどうか。難しかった場合はどこが難しかったか</li>
