--- a/lesson002.html
+++ b/lesson002.html
@@ -11,11 +11,14 @@
   <h2>課題</h2>
   <ol>
     <li>
-      メニューの「表示」→「コマンドパレット」の右にあるショートカット表示を確認してください。 `Ctrl+Shift+P` と表示されていますか？このショートカットは非常によく使うので覚えておいてください。
+      メニューの「表示」→「コマンドパレット」の右にあるショートカット表示を確認してください。<br>
+      `Ctrl+Shift+P` と表示されていますか？このショートカットは非常によく使うので覚えておいてください。<br>
+      違いう表示だったらなんと表示されていたか教えてください。
     </li>
     <li>
       `Ctrl+Shift+P` を押して、コマンドパレットを表示させてください。<br>
       `> ` と書かれた入力ボックスが出てきます。これがコマンドパレットです。`> `の右に「シェル」または「ターミナル」「Terminal」などと入力すると、「ターミナル: 既定のシェルの選択」あるいは「新規ターミナルを開く」のようなみたいなメニューが出てきますので、それをカーソルキーで上下に移動してメニューを選択しエンターを押してください。<br>
+      できるだけマウスは使わずにキーボードで操作するように心がけてください。<br>
       前回の課題で表示させたターミナルが出てくるはずです。<br>
       手順は以下のページの前半を参考にしてください。<br>
       <a href="https://www.javadrive.jp/vscode/terminal/index2.html" target="_blank">VSCode | ターミナルで起動するシェルを変更する</a>
