--- a/lesson001.html
+++ b/lesson001.html
@@ -31,7 +31,7 @@
     <a href="https://www.javadrive.jp/vscode/terminal/index1.html" target="_blank">VSCode | ターミナルを開く/ターミナルを閉じる</a>
   </p>
   <p>
-    この課題を終えたら、または途中で断念したら、できあがった成果物とともに、以下の点を教えてください。このことは今後の課題に共通です。課題の難易度を調整するために必要なことですので、正直に教えてください。スクリーンショットを見せてほしいのは、VSCodeをインストール済みの私がすぐにインストール直後の状態を再現することが困難であり、状態を確認したいためです。
+    この課題を終えたら、または途中で断念したら、できあがった成果物とともに、以下の点を教えてください。このことは今後の課題に共通です。課題の難易度を調整するために必要なことですので、正直に教えてください。スクリーンショットを見せてほしいのは、VSCodeをインストール済みの私がインストール直後の状態を再現することが困難であり、状態を確認したいためです。
   </p>
   <ul>
     <li>この課題が難しかったかどうか。難しかった場合はどこが難しかったか</li>
