--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <li><a href="lesson004.html">lesson004</a></li>
     <li><a href="lesson005.html">lesson005</a></li>
     <li><a href="lesson006.html">lesson006</a></li>
+    <li><a href="lesson007.html">lesson007</a></li>
   </ul>
 </body>
 </html>
